fix button out of box

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -12,7 +12,7 @@
 }
 
 .num-input{
-    @apply bg-gray-200 w-12 rounded text-center;
+    @apply bg-gray-200 w-12 rounded-lg text-center;
     -moz-appearance: none;
 }
 
